--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@ class ImageLoader {
         return new Promise((resolve, reject) => {
             const image = new Image();
             image.onload = function() {
+                console.log('Load image succeeded: ' + url);
                 resolve(image);
             };
             image.onerror = function() {
+                console.log('Load image failed: ' + url);
                 reject('Failed to load ' + url);
             }
+            console.log('Load image started: ' + url);
             image.src = url;
         });
     }
