--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 Your browser does not support the HTML5 canvas tag.
 </canvas>
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
